WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270764
[IFC][Cleanup] Do not use isDamaged as a signal if partial invalidation succeeded
https://bugs.webkit.org/show_bug.cgi?id=270764
Summary
[IFC][Cleanup] Do not use isDamaged as a signal if partial invalidation succe...
alan
Reported
2024-03-10 06:48:42 PDT
ssia
Attachments
Patch
(9.55 KB, patch)
2024-03-10 06:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.75 KB, patch)
2024-03-10 08:11 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(10.75 KB, patch)
2024-03-10 10:18 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-03-10 06:51:45 PDT
Created
attachment 470274
[details]
Patch
Antti Koivisto
Comment 2
2024-03-10 06:55:29 PDT
Comment on
attachment 470274
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470274&action=review
> Source/WebCore/rendering/RenderObject.cpp:1803 > + return !(isRemoval == IsRemoval::Yes ? modernLineLayout->removedFromTree(*renderer.parent(), renderer) : modernLineLayout->insertedIntoTree(*renderer.parent(), renderer));
This is bit hard to reason about. How about doing it in two lines?
alan
Comment 3
2024-03-10 08:11:57 PDT
Created
attachment 470275
[details]
Patch
alan
Comment 4
2024-03-10 10:18:05 PDT
Created
attachment 470277
[details]
[fast-cq]Patch
EWS
Comment 5
2024-03-10 10:22:57 PDT
Committed
275892@main
(61ae5fab1f48): <
https://commits.webkit.org/275892@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470277
[details]
.
Radar WebKit Bug Importer
Comment 6
2024-03-10 10:23:12 PDT
<
rdar://problem/124354368
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug