[IFC][Cleanup] Do not use isDamaged as a signal if partial invalidation succeeded https://bugs.webkit.org/show_bug.cgi?id=270764

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp: Unrelated drive-by fix to make sure we check for bidi combined content.

(WebCore::Layout::InlineItemsBuilder::handleTextContent):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::insertedIntoTree):
(WebCore::LayoutIntegration::LineLayout::removedFromTree):
(WebCore::LayoutIntegration::LineLayout::updateTextContent):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::invalidateLineLayoutAfterTreeMutationIfNeeded):
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::invalidateLineLayoutPathOnContentChangeIfNeeded):

Canonical link: https://commits.webkit.org/275892@main